[tool.poetry]
name = "grind75"
version = "0.1.0"
description = ""
authors = ["eCoolGe <eCoolGe@mail.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
jupytext = "^1.17.2"
notebook = "^7.4.3"
matplotlib = "^3.10.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
