[project]
name = "grind75"
version = "0.1.0"
description = ""
authors = [
    { name = "eCoolGe", email = "eCoolGe@mail.ru" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupytext (>=1.17.2,<2.0.0)",
    "notebook (>=7.4.4,<8.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-sugar = "^1.0.0"
flake8 = "^7.3.0"


[tool.poetry.group.wiki.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.14"
pymdown-extensions = "^10.16"
mkdocs-multirepo-plugin = "^0.8.3"
mkdocs-obsidian-links = "^1.0.4"
mkdocs-minify-plugin = "^0.8.0"
mkdocs-git-revision-date-localized-plugin = "^1.4.7"
mkdocs-obsidian-support-plugin = "^1.4.1"
mkdocs-callouts = "^1.16.0"
mkdocs-git-authors-plugin = "^0.10.0"
mkdocs-awesome-nav = "^3.1.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-v -s --tb=short"
testpaths = ["tests"]
log_cli = true
log_cli_level = "INFO"